@@ -20,7 +20,7 @@ namespace MCDawn
             if (message.Split(' ').Length > 1) { Help(p); return; }
             Level l = (String.IsNullOrEmpty(message) ? p.level : Level.Find(message));
             if (l == null) { Player.SendMessage(p, "Level could not be found or is not loaded."); return; }
-            DataTable likes = MySQL.fillData("SELECT * FROM Likes" + l.name);
+            DataTable likes = MySQL.fillData("SELECT * FROM Likes" + l.name.Replace("@", "$"));
             if (likes.Rows.Count == 0) { Player.SendMessage(p, "Nobody likes this level yet!"); }
             else
             {
